fixing issues on icons, form text align, services section, color font...

--- a/app/assets/styles/modules/_generic-content-container.css
+++ b/app/assets/styles/modules/_generic-content-container.css
@@ -1,13 +1,13 @@
 .generic-content-container {
+  text-align: center;
+  color: $mainSemiDarkBlue;
 
-  p {
-    max-width: 700px;
-    margin: 1rem 0;
+  &  > p {
+    max-width: 900px;
+    margin: 1rem auto;
     font-size: 1rem;
     font-weight: 300;
     line-height: 1.3;
-    color: $mainSemiDarkBlue;
-    text-align: center;
 
     @mixin atXSmall {
       font-size: 1.2rem;
@@ -15,14 +15,11 @@
 
     @mixin atSmall {
       width: 100%;
-      text-align: left;
     }
 
     & strong {
       font-weight: 500;
     }
-
-    
 
   }
 
