--- a/app/assets/styles/modules/_social-icons.css
+++ b/app/assets/styles/modules/_social-icons.css
@@ -5,14 +5,13 @@
   @mixin atMedium {
     margin-top: 5px;
   }
-  
+
   &__icon {
     display: inline-block;
     position: relative;
     width: 32px;
     height: 32px;
-    margin: auto 5px;
-    background-color: $mainOrange;
+    margin: auto 5px; 
     
     & svg {
       display: block;
@@ -21,8 +20,14 @@
       height: 15px;
       top: 50%;
       left: 50%;
-      color: $mainTextColor;
       transform: translate(-50%, -50%);
+      fill: $mainTextColor;
+      transition: fill .3s;
+
+      &:hover {
+        fill: $mainOrange;
+
+      }
     }
   }
 }
